--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <h1>Game menghindari rintangan</h1>
-    <p class="instructions">Tekan tombol Play untuk mulai. Gunakan tombol kiri/kanan untuk gerakkan mobil. Hindari rintangan!</p>
+    <p class="instructions">Tekan tombol Play untuk mulai. Gunakan tombol kiri/kanan untuk gerakkan kotak mu. Hindari rintangan!</p>
     
     <!-- Tombol Play -->
     <button id="playBtn">Play</button>
@@ -236,3 +236,4 @@
     </script>
 </body>
 </html>
+
