--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 <body>
 
 <h2>Game Mobil</h2>
+<p class="instructions">Gunakan panah kiri/kanan untuk gerakkan mobil. Hindari rintangan!</p>
+
 
 <!-- SCREEN PLAY -->
 <div id="playScreen">
@@ -233,3 +235,4 @@ rightBtn.addEventListener("touchstart", e => {
 
 </body>
 </html>
+
